--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/activities.html"></include>
+    <include src="./partials/about-us.html"></include>
+    <include src="./partials/testimonials.html"></include>
+    <include src="./partials/letest-news.html"></include>
+    <include src="./partials/sign-up.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
