--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,27 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <!-- Алексей -->
     <include src="./partials/header.html"></include>
+    <!-- Виталий Тымко -->
     <include src="./partials/hero.html"></include>
-    <include src="./partials/activities.html"></include>
+    <!-- Максим -->
+    <include src="./partials/service.html"></include>
+    <!-- Анатолий -->
     <include src="./partials/about-us.html"></include>
+    <!-- Олег Буковский -->
+    <include src="./partials/work.html"></include>
+    <!-- Анна -->
+    <include src="./partials/complited.html"></include>
+    <!-- Юра Ящук -->
     <include src="./partials/testimonials.html"></include>
+    <!-- Андрей Гаргат -->
     <include src="./partials/letest-news.html"></include>
+    <!-- Диана -->
     <include src="./partials/sign-up.html"></include>
+    <!-- Наташа -->
     <include src="./partials/footer.html"></include>
+    <!-- Андрей Сулимка -->
+    <include src="./partials/modal.html"></include>
   </body>
 </html>
